beta version of auto-watch
