# html/swagger/swagger.json
@@ -995,6 +995,12 @@
                     },
                     "tickets": {
                       "type": "integer"
+                    },
+                    "watched": {
+                      "type": "integer"
+                    },
+                    "watch_rewards": {
+                      "type": "integer"
                     }
                   }
                 }
@@ -1005,7 +1011,9 @@
                 "data": {
                   "collected": 3425,
                   "errors": 0,
-                  "tickets": 5
+                  "tickets": 5,
+                  "watched": 934,
+                  "watch_rewards": 73
                 }
               }
             }
@@ -1261,6 +1269,178 @@
                 "code": 0,
                 "message": "OK",
                 "data": true
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autowatch/": {
+      "get": {
+        "summary": "Returns auto-watching status (enabled/disabled)",
+        "description": "Returns auto-watching status (enabled/disabled)",
+        "tags": ["Station"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Auto-watching status",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "boolean"
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": true
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autowatch/enable": {
+      "post": {
+        "summary": "Turns on auto-watching of videos",
+        "description": "Turns on auto-watching of videos",
+        "tags": ["Station"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Auto-watching status",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "boolean"
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": true
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autowatch/disable": {
+      "post": {
+        "summary": "Turns off auto-watching of videos",
+        "description": "Turns off auto-watching of videos",
+        "tags": ["Station"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Auto-watching status",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "boolean"
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": true
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/autowatch/rewards": {
+      "get": {
+        "summary": "Returns history of auto-watching rewards",
+        "description": "Returns last 20 rewards for watching second videos",
+        "tags": ["Station"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Auto-watch rewards",
+            "schema": {
+              "type": "object",
+              "required": [
+                "code",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "date": {
+                        "type": "integer"
+                      },
+                      "reward": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              },
+              "example": {
+                "code": 0,
+                "message": "OK",
+                "data": [
+                  {
+                    "date": 145363654,
+                    "reward": "VAGON_VOUCHERS_3"
+                  },
+                  {
+                    "date": 145363656,
+                    "reward": "LOTTERY_TICKET"
+                  }
+                ]
               }
             }
           }
